--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <appium.version>9.2.2</appium.version>
         <testng.version>7.9.0</testng.version>
+        <org.json.version>20240303</org.json.version>
     </properties>
 
     <dependencies>
@@ -30,6 +31,14 @@
             <artifactId>java-client</artifactId>
             <version>${appium.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${org.json.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
