--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,31 @@
         <com-io.version>2.16.1</com-io.version>
         <extentreport.version>5.1.1</extentreport.version>
         <common-codec.version>1.17.0</common-codec.version>
+        <maven-surefire.plugin.version>3.2.5</maven-surefire.plugin.version>
+        <maven.compiler.version>3.13.0</maven.compiler.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire.plugin.version}</version>
+                <configuration>
+                    <suiteXmlFiles>testng.xml</suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
 
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
