updating appium version, uiautomator2 version and changing URL

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -4,4 +4,4 @@ androidAutomationName=UiAutomator2
 androidCommandTimeoutValue=300
 androidApkPath=/src/test/resources/app/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
 androidOnReset=false
-androidAppiumServerEndPointURL=http://localhost:4723
+androidAppiumServerEndPointURL=http://127.0.0.1:4723
